--- a/bookStore/src/main/resources/templates/bookList.html
+++ b/bookStore/src/main/resources/templates/bookList.html
@@ -74,8 +74,8 @@
                     <td th:text="${b.price}"></td>
                     <td class="action-icons">
                         <a class="btn btn-secondary btn-sm" th:href="@{/mylist/{id}(id=${b.id})}">Add To Mybook</a>
-                        <a style="color:blue" th:href="@{/editBook/{id}(id=${b.id})}"><i class="fa-solid fa-pen-to-square"></i></a>
-                        <a style="color:red" th:href="@{/deleteBook/{id}(id=${b.id})}"><i class="fa-solid fa-trash"></i></a>
+                        <a class="btn btn-primary btn-sm" th:href="@{/editBook/{id}(id=${b.id})}">Edit</a>
+                        <a class="btn btn-danger btn-sm" th:href="@{/deleteBook/{id}(id=${b.id})}">Delete</a>
                     </td>
                 </tr>
             </tbody>
