--- a/bookStore/src/main/resources/templates/myBooks.html
+++ b/bookStore/src/main/resources/templates/myBooks.html
@@ -79,8 +79,8 @@
                     <td th:text="${b.author}"></td>
                     <td th:text="${b.price}"></td>
                     <td>
-                        <a style="color:red" th:href="@{/deleteMyList/{id}(id=${b.id})}">
-                            <i class="fa-solid fa-trash"></i>
+                        <a class="btn btn-danger btn-sm" th:href="@{/deleteMyList/{id}(id=${b.id})}">
+                           Delete
                         </a>
                     </td>
                 </tr>
