--- a/bookStore/src/main/resources/templates/bookList.html
+++ b/bookStore/src/main/resources/templates/bookList.html
@@ -42,14 +42,14 @@
                         <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="available_books">Available Books</a>
+                        <a class="nav-link text-white" href="available_books">Buku yg Tersedia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="my_books">My Books</a>
+                        <a class="nav-link text-white" href="my_books">Buku saya</a>
                     </li>
                 </ul>
                 <div>
-                    <a class="nav-link text-white" href="book_register">New Book Register</a>
+                    <a class="nav-link text-white" href="book_register">Daftar Buku Baru</a>
                 </div>
             </div>
         </div>
