--- a/bookStore/src/main/resources/templates/myBooks.html
+++ b/bookStore/src/main/resources/templates/myBooks.html
@@ -48,14 +48,14 @@
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="available_books">Available Books</a>
+                        <a class="nav-link" href="available_books">Buku yg Tersedia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="my_books">My Books</a>
+                        <a class="nav-link" href="my_books">Buku Saya</a>
                     </li>
                 </ul>
                 <div>
-                    <a class="nav-link" href="book_register">New Book Register</a>
+                    <a class="nav-link" href="book_register">Daftar Buku Barur</a>
                 </div>
             </div>
         </div>
