--- a/bookStore/src/main/resources/templates/bookEdit.html
+++ b/bookStore/src/main/resources/templates/bookEdit.html
@@ -58,7 +58,7 @@
                 <h4 class="text-white">Edit Book Here</h4>
             </div>
             <div class="card-body">
-                <form th:action="@{/save}" method="post" th:object="${book}">
+                <form th:action="@{/save}" method="post" th:object="${book}" id="bookEditForm">
                     <input type="hidden" name="id" th:value="${book.id}"/>
                     
                     <div class="mb-3">
@@ -82,6 +82,7 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -94,6 +95,23 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
+
+    <script>
+        document.getElementById('bookEditForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            // Assuming the form submission is successful
+            Swal.fire({
+                icon: 'success',
+                title: 'Success!',
+                text: 'The book has been updated successfully.'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // Redirect to another page or reset the form
+                    document.getElementById('bookEditForm').submit();
+                }
+            });
+        });
+    </script>
 
 </body>
 </html>
