--- a/bookStore/src/main/resources/templates/bookRegister.html
+++ b/bookStore/src/main/resources/templates/bookRegister.html
@@ -58,7 +58,7 @@
                 <h4 class="text-white">New Book Register</h4>
             </div>
             <div class="card-body">
-                <form th:action="@{/save}" method="post">
+                <form th:action="@{/save}" method="post" id="bookForm">
                     <div class="mb-3">
                         <label for="name" class="form-label">Name</label>
                         <input type="text" class="form-control" name="name">
@@ -79,7 +79,7 @@
         </div>
     </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -92,6 +92,23 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
+
+    <script>
+        document.getElementById('bookForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            // Assuming the form submission is successful
+            Swal.fire({
+                icon: 'success',
+                title: 'Success!',
+                text: 'The book has been registered successfully.'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // Redirect to another page or reset the form
+                    document.getElementById('bookForm').submit();
+                }
+            });
+        });
+    </script>
 
 </body>
 </html>
