--- a/bookStore/src/main/resources/templates/login.html
+++ b/bookStore/src/main/resources/templates/login.html
@@ -2,18 +2,65 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Login</title>
+    <style>
+        .navbar-custom {
+            background-color: #20B2AA; /* Warna biru tosca */
+        }
+        .card-header-custom {
+            background-color: #20B2AA; /* Warna biru tosca */
+            color: white;
+        }
+    </style>
 </head>
 <body>
-    <h2>Login</h2>
-    <form th:action="@{/login}" method="post">
-        <label>Username: <input type="text" name="username"></label><br>
-        <label>Password: <input type="password" name="password"></label><br>
-        <button type="submit">Login</button>
-    </form>
-    <!-- Display error message if authentication fails -->
-    <p th:if="${param.error}">Invalid username or password.</p>
-    <a href="/register" class="btn btn-primary">Register</a>
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
+        <div class="container-fluid">
+            <a class="navbar-brand text-white" href="#">Perpustakaan</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link active text-white" aria-current="page" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="available_books">Available Books</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="my_books">My Books</a></li>
+                </ul>
+                <div>
+                    <a class="nav-link text-white" href="book_register">New Book Register</a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
+    <div class="container my-5">
+        <div class="card mx-auto" style="width: 24rem;">
+            <div class="card-header text-center card-header-custom">
+                <h4 class="text-white">Login</h4>
+            </div>
+            <div class="card-body">
+                <form th:action="@{/login}" method="post">
+                    <div class="mb-3">
+                        <label for="username" class="form-label">Username</label>
+                        <input type="text" class="form-control" name="username">
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" name="password">
+                    </div>
+                    <center><button type="submit" class="btn btn-primary">Login</button></center>
+                </form>
+                <!-- Display error message if authentication fails -->
+                <p th:if="${param.error}" class="text-danger text-center mt-3">Invalid username or password.</p>
+                <center><a href="/register" class="btn btn-secondary mt-3">Register</a></center>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
