--- a/bookStore/src/main/resources/templates/createTransaction.html
+++ b/bookStore/src/main/resources/templates/createTransaction.html
@@ -7,16 +7,16 @@
 <body>
     <h2>Create Transaction</h2>
     <form class="col-md-4 offset-md-4" th:action="@{/add}" method="post"> <!-- Perbaiki action di sini -->
-        <label for="buyerName">Buyer Name:</label><br>
-        <input type="text" id="buyerName" name="buyerName"><br>
+        <label for="buyer_name">Buyer Name:</label><br>
+        <input type="text" id="buyer_name" name="buyer_name"><br>
         <label for="email">Email:</label><br>
         <input type="email" id="email" name="email"><br>
         <label for="address">Address:</label><br>
         <input type="text" id="address" name="address"><br>
-        <label for="phoneNumber">Phone Number:</label><br>
-        <input type="text" id="phoneNumber" name="phoneNumber"><br>
+        <label for="phone_number">Phone Number:</label><br>
+        <input type="text" id="phone_number" name="phone_number"><br>
         <label for="book_id">Book:</label><br>
-        <select id="book_id" name="bookId">
+        <select id="book_id" name="book_id">
             <option value="">-- Select a Book --</option>
             <th:block th:each="book : ${books}">
                 <option th:value="${book.id}" th:text="${book.name}"></option>
