--- a/bookStore/src/main/resources/templates/myBooks.html
+++ b/bookStore/src/main/resources/templates/myBooks.html
@@ -55,7 +55,7 @@
                     </li>
                 </ul>
                 <div>
-                    <a class="nav-link" href="book_register">Daftar Buku Barur</a>
+                    <a class="nav-link" href="book_register">Daftar Buku Baru</a>
                 </div>
             </div>
         </div>
@@ -80,7 +80,7 @@
                     <td th:text="${b.price}"></td>
                     <td>
                         <a class="btn btn-danger btn-sm" th:href="@{/deleteMyList/{id}(id=${b.id})}">
-                           Delete
+                            Delete
                         </a>
                     </td>
                 </tr>
