menambahkan style pada data transaksi,

--- a/bookStore/src/main/resources/templates/bookList.html
+++ b/bookStore/src/main/resources/templates/bookList.html
@@ -45,7 +45,10 @@
                         <a class="nav-link text-white" href="available_books">Buku yg Tersedia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="my_books">Buku saya</a>
+                        <a class="nav-link text-white" href="my_books">Buku Saya</a>
+                    </li>
+                         <li class="nav-item">
+                        <a class="nav-link text-white" href="datatransactions">Data Transaksi</a>
                     </li>
                 </ul>
                 <div>
