--- a/bookStore/src/main/resources/templates/home.html
+++ b/bookStore/src/main/resources/templates/home.html
@@ -49,7 +49,7 @@
                         <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="available_books">List Buku yg Tersedia</a>
+                        <a class="nav-link text-white" href="available_books">Buku yg Tersedia</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="my_books">Buku Saya</a>
