--- a/bookStore/src/main/resources/templates/myBooks.html
+++ b/bookStore/src/main/resources/templates/myBooks.html
@@ -53,6 +53,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="my_books">Buku Saya</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="datatransactions">Data Transaksi</a>
+                    </li>
                 </ul>
                 <div>
                     <a class="nav-link" href="book_register">Daftar Buku Baru</a>
