--- a/bookStore/src/main/resources/templates/transactionList.html
+++ b/bookStore/src/main/resources/templates/transactionList.html
@@ -2,35 +2,98 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Transaction List</title>
+    <style>
+        .navbar-custom {
+            background-color: #20B2AA; /* Teal Blue color */
+        }
+        .table-custom th {
+            background-color: #20B2AA;
+            color: white;
+        }
+        .table-custom tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+        .table-custom tr:hover {
+            background-color: #ddd;
+        }
+        .table-custom th, .table-custom td {
+            padding: 15px;
+            text-align: left;
+        }
+        .action-icons a {
+            margin-right: 10px;
+        }
+        .transaction-title {
+            color: #20B2AA; /* Warna Teal Blue */
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h2>List of Transactions</h2>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Buyer Name</th>
-                <th>Email</th>
-                <th>Address</th>
-                <th>Phone Number</th>
-                <th>Quantity</th>
-                <th>Total Price</th>
-                <th>Book ID</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="transaction : ${transactions}">
-                <td th:text="${transaction.id}"></td>
-                <td th:text="${transaction.buyer_name}"></td>
-                <td th:text="${transaction.email}"></td>
-                <td th:text="${transaction.address}"></td>
-                <td th:text="${transaction.phone_number}"></td>
-                <td th:text="${transaction.quantity}"></td>
-                <td th:text="${transaction.totalPrice}"></td>
-                <td th:text="${transaction.book_id}"></td>
-            </tr>
-        </tbody>
-    </table>
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
+        <div class="container-fluid">
+            <a class="navbar-brand text-white" href="#">Perpustakaan</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="available_books">Buku yg Tersedia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="my_books">Buku Saya</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="datatransactions">Data Transaksi</a>
+                    </li>
+                </ul>
+                <div>
+                    <a class="nav-link text-white" href="book_register">Daftar Buku Baru</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container my-5 col-md-8"> 
+        <table class="table table-striped table-hover table-custom">
+            <thead>
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Buyer Name</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Address</th>
+                    <th scope="col">Phone Number</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Total Price</th>
+                    <th scope="col">Book ID</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="transaction : ${transactions}">
+                    <td th:text="${transaction.id}"></td>
+                    <td th:text="${transaction.buyer_name}"></td>
+                    <td th:text="${transaction.email}"></td>
+                    <td th:text="${transaction.address}"></td>
+                    <td th:text="${transaction.phone_number}"></td>
+                    <td th:text="${transaction.quantity}"></td>
+                    <td th:text="${transaction.totalPrice}"></td>
+                    <td th:text="${transaction.book_id}"></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
