--- a/bookStore/src/main/resources/templates/createTransaction.html
+++ b/bookStore/src/main/resources/templates/createTransaction.html
@@ -43,8 +43,8 @@
             <div class="card-body">
                 <form class="col-md-12" th:action="@{/add}" method="post"> <!-- Perbaiki action di sini -->
                     <div class="mb-3">
-                        <label for="buyerName" class="form-label">Buyer Name:</label>
-                        <input type="text" class="form-control" id="buyerName" name="buyerName">
+                        <label for="buyer_name" class="form-label">Buyer Name:</label>
+                        <input type="text" class="form-control" id="buyer_name" name="buyer_name">
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label">Email:</label>
@@ -55,8 +55,8 @@
                         <input type="text" class="form-control" id="address" name="address">
                     </div>
                     <div class="mb-3">
-                        <label for="phoneNumber" class="form-label">Phone Number:</label>
-                        <input type="text" class="form-control" id="phoneNumber" name="phoneNumber">
+                        <label for="phone_number" class="form-label">Phone Number:</label>
+                        <input type="text" class="form-control" id="phone_number" name="phone_number">
                     </div>
                     <div class="mb-3">
                         <label for="book_id" class="form-label">Book:</label>
