--- a/bookStore/src/main/resources/templates/createTransaction.html
+++ b/bookStore/src/main/resources/templates/createTransaction.html
@@ -6,12 +6,41 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Create Transaction</title>
     <style>
-        .navbar-custom {
-            background-color: #20B2AA; /* Warna biru tosca */
+        body {
+            font-family: 'Montserrat', sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background: linear-gradient(to right, rgba(0, 123, 255, 0.7), rgba(0, 123, 255, 0.3)), url('https://source.unsplash.com/1600x900/?books,library');
+            background-size: cover;
+            background-position: center;
+            color: #fff;
+            padding-top: 60px; /* Added padding-top to create space for navbar */
         }
+        .navbar-custom {
+            background-color: #20B2AA; /* Teal Blue color */
+        }
+        .navbar-custom .nav-link {
+            color: white; /* Ensuring the navbar link text is white */
+        }
+        .navbar-custom .nav-link.active {
+            color: white; /* Ensuring the active navbar link text is also white */
+        }
+        .table-custom {
+            background-color: white; /* Set background color for the entire table */
+            color: black; /* Set text color for better readability */
+        }
+        
         .card-header-custom {
             background-color: #20B2AA; /* Warna biru tosca */
             color: white;
+        }
+        .form-label {
+            color: black; /* Set form label text color to black */
         }
     </style>
 </head>
@@ -45,7 +74,7 @@
                         <select class="form-select" id="book_id" name="bookId">
                             <option value="">-- Select a Book --</option>
                             <th:block th:each="book : ${books}">
-                                <option th:value="${book.id}" th:text="${book.name}"></option>
+                                <option th:value="${book.price}" th:text="${book.name}"></option>
                             </th:block>
                         </select>
                     </div>
@@ -59,7 +88,7 @@
                     </div>
                     <div class="d-flex justify-content-between">
                         <input type="submit" class="btn btn-primary" value="Submit">
-                        <a href="/home" class="btn btn-secondary">Cancel</a> <!-- Button Cancel -->
+                        <a href="/" class="btn btn-secondary">Cancel</a> <!-- Button Cancel -->
                     </div>
                 </form>
             </div>
