--- a/bookStore/src/main/resources/templates/myBooks.html
+++ b/bookStore/src/main/resources/templates/myBooks.html
@@ -7,6 +7,35 @@
     <title>Perpustakaan</title>
     <script src="https://kit.fontawesome.com/0faddc1af8.js" crossorigin="anonymous"></script>
     <style>
+        body {
+            font-family: 'Montserrat', sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background: linear-gradient(to right, rgba(0, 123, 255, 0.7), rgba(0, 123, 255, 0.3)), url('https://source.unsplash.com/1600x900/?books,library');
+            background-size: cover;
+            background-position: center;
+            color: #fff;
+            padding-top: 60px; /* Added padding-top to create space for navbar */
+        }
+        .container {
+            text-align: center;
+            background-color: rgba(0, 0, 0, 0.6);
+            padding: 50px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+        }
+        .table-container {
+            background-color: rgba(255, 255, 255, 0.9);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            color: #000;
+        }
         .navbar-custom {
             background-color: #20B2AA; /* Teal Blue color */
         }
@@ -37,7 +66,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand text-white" href="#">Perpustakaan</a>
             
@@ -69,7 +98,7 @@
         </div>
     </nav>
 
-    <div class="container my-5 col-md-8">
+    <div class="container table-container my-5 col-md-8">
         <table class="table table-striped table-hover table-custom">
             <thead>
                 <tr>
