--- a/bookStore/src/main/resources/templates/transactionList.html
+++ b/bookStore/src/main/resources/templates/transactionList.html
@@ -6,8 +6,46 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Transaction List</title>
     <style>
+        body {
+            font-family: 'Montserrat', sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background: linear-gradient(to right, rgba(0, 123, 255, 0.7), rgba(0, 123, 255, 0.3)), url('https://source.unsplash.com/1600x900/?library,books');
+            background-size: cover;
+            background-position: center;
+            color: #fff;
+            padding-top: 60px; /* Added padding-top to create space for navbar */
+        }
+        .container {
+            text-align: center;
+            background-color: rgba(0, 0, 0, 0.6);
+            padding: 50px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+        }
+        .table-container {
+            background-color: rgba(255, 255, 255, 0.9);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            color: #000;
+        }
         .navbar-custom {
             background-color: #20B2AA; /* Teal Blue color */
+        }
+        .navbar-custom .navbar-brand {
+            color: white; /* White text color for the brand */
+        }
+        .navbar-custom .nav-link {
+            color: white !important; /* White text color for the links */
+        }
+        .navbar-custom .navbar-toggler-icon {
+            background-color: white; /* White color for the toggle icon */
         }
         .table-custom th {
             background-color: #20B2AA;
@@ -36,7 +74,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand text-white" href="#">Perpustakaan</a>
             
@@ -68,7 +106,7 @@
         </div>
     </nav>
 
-    <div class="container my-5 col-md-8"> 
+    <div class="container table-container my-5 col-md-8"> 
         <table class="table table-striped table-hover table-custom">
             <thead>
                 <tr>
